# set_timeout

./: Cargo.toml  README.md
examples/: basic_usage.rs  cancel.rs  global_variable.rs  min_timeout_delay.rs  multitasking.rs
src/: lib.rs  scheduled_timeout.rs  scheduler_task.rs
