[package]
name = "set_timeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "*", default-features = false, features = ["sync", "time", "rt"] }

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
rand = "*"
