[package]
name = "set_timeout"
authors = ["Roee Shoshani"]
version = "0.1.3"
edition = "2021"
description = "A crate which allows efficiently executing futures after some delay has passed"
repository = "https://github.com/MaderNoob/set_timeout"
keywords = ["timeout", "setTimeout", "tokio", "async", "delay"]
categories = ["asynchronous", "concurrency", "algorithms", "data-structures"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0"
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0"
lazy_static = "1"
